# GEditBench_v2

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml
configs/datasets/: bmk.json  geditv2_candidates.json  openedit_candidates.json
configs/datasets/candidate_pools/: background_change.json  camera_motion.json  color_alter.json  cref.json  enhancement.json  material_alter.json  motion_change.json  object_extraction.json  oref.json  ps_human.json  size_adjustment.json  sref.json  style_transfer.json  subject_add.json  subject_remove.json  subject_replace.json  text_editing.json  tone_transfer.json
configs/lora_sft/: qwen3_vl_8b_train.yaml
configs/lora_sft/history/0319/: sft_config_150657.json
configs/lora_sft/history/0320/: sft_config_095603.json
configs/pipelines/: data_construction_configs.json  user_config.yaml
configs/pipelines/ablation/: eval_vc_gemini.yaml  eval_vc_gpt5d1.yaml  eval_vc_qwen3.yaml
configs/pipelines/human_centric/: motion_change.yaml  ps_human.yaml
configs/pipelines/modules_init/: experts_default.yaml  pipes_default.yaml
configs/pipelines/object_centric/: color_alter.yaml  cref.yaml  material_alter.yaml  oref.yaml  size_adjustment.yaml  subject_add.yaml  subject_remove.yaml  subject_replace.yaml  text_editing.yaml
configs/pipelines/vlm_as_a_judge/: eval_if.yaml  eval_vc.yaml  eval_vq.yaml  gemini.yaml  openai.yaml  vllm.yaml
data/: README.md
data/a_raw_img_prompt_pair_data/: README.md
data/b_filtered_img_prompt_pair_data/: README.md
data/b_filtered_img_prompt_pair_data/background_change/: README.md
data/b_filtered_img_prompt_pair_data/background_change/gen_cache/: README.md
data/b_filtered_img_prompt_pair_data/camera_motion/: README.md
data/b_filtered_img_prompt_pair_data/camera_motion/gen_cache/: README.md
data/b_filtered_img_prompt_pair_data/color_alter/: README.md
data/b_filtered_img_prompt_pair_data/color_alter/gen_cache/: README.md
data/b_filtered_img_prompt_pair_data/cref/: README.md
data/b_filtered_img_prompt_pair_data/enhancement/: README.md
data/b_filtered_img_prompt_pair_data/material_alter/: README.md
data/b_filtered_img_prompt_pair_data/motion_change/: README.md
data/b_filtered_img_prompt_pair_data/object_extraction/: README.md
data/b_filtered_img_prompt_pair_data/oref/: README.md
data/b_filtered_img_prompt_pair_data/ps_human/: README.md
data/b_filtered_img_prompt_pair_data/size_adjustment/: README.md
data/b_filtered_img_prompt_pair_data/sref/: README.md
data/b_filtered_img_prompt_pair_data/style_transfer/: README.md
data/b_filtered_img_prompt_pair_data/subject-add/: README.md
data/b_filtered_img_prompt_pair_data/subject-remove/: README.md
data/b_filtered_img_prompt_pair_data/subject-replace/: README.md
data/b_filtered_img_prompt_pair_data/text_editing/: README.md
data/b_filtered_img_prompt_pair_data/tone_transfer/: README.md
data/c_annotated_group_data/: README.md
data/c_annotated_group_data/.cache/: README.md
data/d_train_data/: README.md
data/e_openedit_pair_res/: README.md
data/e_openedit_pair_res/.cache/: README.md
data/e_openedit_pair_res/openedit/: README.md
data/f_reward_results/: README.md
data/f_reward_results/.cache/: README.md
data/f_reward_results/vc_reward/: README.md
data/z_reward_bench/: README.md  editreward_bench_visual_quality.jsonl  shuffled_editscore_bench_consistency.json  shuffled_editscore_bench_prompt_following.json
data/z_reward_bench/EditReward-Bench/: README.md
data/z_reward_bench/editreward_bench_images/: README.md
environments/: README.md  annotate.yml  pvc_judge.yml  train.yml
environments/conda/: annotate.explicit.txt  annotate.from-history.yml  pvc_judge.explicit.txt  pvc_judge.from-history.yml  train.explicit.txt  train.from-history.yml
environments/requirements/: annotate.lock.txt  pvc_judge.lock.txt  train.lock.txt
environments/requirements/non_pypi/: annotate.txt  pvc_judge.txt  train.txt
environments/requirements/optional/: annotate.txt  train.txt
notebooks/: preference_pair_synthesis.ipynb
scripts/: calc.sh  elo.sh  export_envs.sh  install.sh  install_autogen.sh  install_autopipeline.sh  install_autotrain.sh  local_eval.sh  merge_lora.py  prepare_raw_data.sh  uninstall_autogen.sh  uninstall_autopipeline.sh  uninstall_autotrain.sh
src/autogen/: constants.py  prepare_nano_consistent_data.py  prepare_pico_data.py  prepare_unicedit.py
src/autogen/utils/: kcenter_greedy.py
src/autogen/workflows/: __init__.py  filtering.py  generation.py
src/autopipeline/: __init__.py
src/autopipeline/components/: __init__.py  constant.py
src/autopipeline/pipelines/: __init__.py  base_pipeline.py  human_centric.py  object_centric.py  vlm_as_a_judge.py
src/autopipeline/postprocess/: __init__.py  train_pairs.py
src/autopipeline/runners/: __init__.py  executors.py  runners.py  workers.py
src/autotrain/: constants.py
src/autotrain/train/: dataset.py  qwen_vl_trainer.py  train_sft_lora.py
src/autotrain/train/utils/: params.py  (+3 more)
src/cli/: __init__.py  __main__.py  autogen  autogen.py  autopipeline  autopipeline.py  autotrain  autotrain.py
src/common_utils/: calculate_statistics.py  dataset_loader.py  elo_score.py  image_util.py  json_util.py  logging_util.py  pairwise.py  project_paths.py
src/core/: cache_manager.py  config_engine.py  registry.py  wrapper.py
src/inference/: pvc_judge.py  run_eval.py
src/inference/utils/: lora_merge.py
src/prompts/: README.md  prompt_manager.py
src/schemas/: pipeline_io.py  prompt_template.py
used_scripts/: convert_gemini_to_train_pairs.py  convert_group_to_train_pairs.py  filter.py  os_geditv2_bench.py  os_openedit_bench.py  os_vcreward_bench.py  run_geditv2_mp.py  run_mp.py  run_openedit_mp.py
vllm_deploy_scripts/: glm4d5_v.sh  pvc_judge.sh  qwen2d5_vl.sh  qwen3.sh  qwen3_vl.sh
website/: README.md  docusaurus.config.ts
website/docs/getting-started/: quickstart-autopipeline.md
website/docs/reference/: cli-autopipeline.md  task-support-matrix.md
website/docs/tutorials/: first-eval.md
website/src/pages/: index.module.css  index.tsx
(+84 files in other folders)
