[project]
name = "open-edit-environments"
version = "0.1.0"
description = "Environment profiles for annotate, train, and pvc_judge workflows"
readme = "environments/README.md"
requires-python = ">=3.11,<3.13"
dependencies = []

[project.optional-dependencies]
annotate = [
  "absl-py>=2.4.0",
  "accelerate>=1.10.1",
  "aiohappyeyeballs>=2.6.1",
  "aiohttp>=3.13.1",
  "aiosignal>=1.4.0",
  "albucore>=0.0.24",
  "albumentations>=2.0.8",
  "annotated-types>=0.7.0",
  "antlr4-python3-runtime>=4.9.3",
  "anyio>=4.11.0",
  "asttokens>=3.0.1",
  "attrs>=25.4.0",
  "bcrypt>=4.3.0",
  "beautifulsoup4>=4.14.2",
  "boto3>=1.40.33",
  "botocore>=1.40.33",
  "bs4>=0.0.2",
  "cachetools>=6.2.2",
  "certifi>=2025.8.3",
  "cffi>=2.0.0",
  "charset-normalizer>=3.4.3",
  "choix>=0.4.1",
  "click>=8.3.0",
  "colorlog>=6.10.1",
  "comm>=0.2.3",
  "contourpy>=1.3.3",
  "cryptography>=46.0.1",
  "cuda-bindings>=12.9.4",
  "cuda-pathfinder>=1.3.3",
  "cycler>=0.12.1",
  "Cython>=3.2.4",
  "datasets>=4.2.0",
  "debugpy>=1.8.20",
  "decorator>=5.2.1",
  "dill>=0.4.0",
  "distro>=1.9.0",
  "easydict>=1.13",
  "executing>=2.2.1",
  "filelock>=3.20.0",
  "flatbuffers>=25.12.19",
  "fonttools>=4.59.2",
  "frozenlist>=1.8.0",
  "fsspec>=2025.12.0",
  "google-auth>=2.43.0",
  "google-genai>=1.53.0",
  "h11>=0.16.0",
  "hf-xet>=1.1.10",
  "httpcore>=1.0.9",
  "httpx>=0.28.1",
  "huggingface-hub>=0.34.4",
  "hydra-core>=1.3.2",
  "idna>=3.10",
  "imageio>=2.37.0",
  "insightface>=0.7.3",
  "iopath>=0.1.10",
  "ipykernel>=7.1.0",
  "ipython>=9.9.0",
  "ipython_pygments_lexers>=1.1.1",
  "jedi>=0.19.2",
  "Jinja2>=3.1.6",
  "jiter>=0.11.0",
  "jiwer>=4.0.0",
  "jmespath>=1.0.1",
  "joblib>=1.5.2",
  "json_repair>=0.52.4",
  "jsonschema>=4.26.0",
  "jsonschema-specifications>=2025.9.1",
  "jupyter_client>=8.8.0",
  "jupyter_core>=5.9.1",
  "kiwisolver>=1.4.9",
  "lazy_loader>=0.4",
  "lpips>=0.1.4",
  "Markdown>=3.9",
  "MarkupSafe>=2.1.5",
  "matplotlib>=3.10.6",
  "matplotlib-inline>=0.2.1",
  "mediapipe>=0.10.9",
  "megfile>=4.2.4",
  "ml_dtypes>=0.5.4",
  "mpmath>=1.3.0",
  "multidict>=6.7.0",
  "multiprocess>=0.70.16",
  "nest_asyncio>=1.6.0",
  "networkx>=3.6.1",
  "numpy>=2.3.5",
  "nvidia-cublas-cu12>=12.6.4.1",
  "nvidia-cuda-cupti-cu12>=12.6.80",
  "nvidia-cuda-nvrtc-cu12>=12.6.77",
  "nvidia-cuda-runtime-cu12>=12.6.77",
  "nvidia-cudnn-cu12>=9.5.1.17",
  "nvidia-cufft-cu12>=11.3.0.4",
  "nvidia-cufile-cu12>=1.11.1.6",
  "nvidia-curand-cu12>=10.3.7.77",
  "nvidia-cusolver-cu12>=11.7.1.2",
  "nvidia-cusparse-cu12>=12.5.4.2",
  "nvidia-cusparselt-cu12>=0.6.3",
  "nvidia-nccl-cu12>=2.26.2",
  "nvidia-nvjitlink-cu12>=12.6.85",
  "nvidia-nvshmem-cu12>=3.4.5",
  "nvidia-nvtx-cu12>=12.6.77",
  "omegaconf>=2.3.0",
  "onnx>=1.16.0",
  "onnxruntime>=1.24.1",
  "openai>=1.109.1",
  "opencv-contrib-python>=4.13.0.90",
  "opencv-python>=4.12.0.88",
  "opencv-python-headless>=4.13.0.92",
  "packaging>=26.0",
  "pandas>=2.3.2",
  "paramiko>=3.5.1",
  "parso>=0.8.5",
  "pexpect>=4.9.0",
  "pillow>=12.0.0",
  "pillow-avif-plugin>=1.5.2",
  "pip>=26.0",
  "platformdirs>=4.5.1",
  "portalocker>=3.2.0",
  "POT>=0.9.6.post1",
  "prettytable>=3.17.0",
  "prompt_toolkit>=3.0.52",
  "propcache>=0.4.1",
  "protobuf>=3.20.3",
  "psutil>=7.2.2",
  "ptyprocess>=0.7.0",
  "pure_eval>=0.2.3",
  "pyarrow>=21.0.0",
  "pyasn1>=0.6.1",
  "pyasn1_modules>=0.4.2",
  "pycparser>=2.23",
  "pydantic>=2.11.9",
  "pydantic_core>=2.33.2",
  "Pygments>=2.19.2",
  "PyNaCl>=1.6.0",
  "pyparsing>=3.2.4",
  "python-dateutil>=2.9.0.post0",
  "pytorch-msssim>=1.0.0",
  "pytz>=2025.2",
  "PyYAML>=6.0.2",
  "pyzmq>=27.1.0",
  "RapidFuzz>=3.14.1",
  "referencing>=0.37.0",
  "regex>=2025.9.1",
  "requests>=2.32.5",
  "rpds-py>=0.30.0",
  "rsa>=4.9.1",
  "s3transfer>=0.14.0",
  "safetensors>=0.6.2",
  "scikit-image>=0.25.2",
  "scikit-learn>=1.7.2",
  "scipy>=1.16.2",
  "seaborn>=0.13.2",
  "setuptools>=80.10.2",
  "simsimd>=6.5.12",
  "six>=1.17.0",
  "sniffio>=1.3.1",
  "sounddevice>=0.5.5",
  "soupsieve>=2.8",
  "stack_data>=0.6.3",
  "stringzilla>=4.6.0",
  "sympy>=1.14.0",
  "tenacity>=9.1.2",
  "threadpoolctl>=3.6.0",
  "tifffile>=2025.9.20",
  "tokenizers>=0.22.0",
  "torch==2.7.0",
  "torchaudio==2.7.0",
  "torchvision==0.22.0",
  "tornado>=6.5.4",
  "tqdm>=4.67.1",
  "traitlets>=5.14.3",
  "transformers>=4.56.1",
  "triton>=3.3.0",
  "typing_extensions>=4.15.0",
  "typing-inspection>=0.4.1",
  "tzdata>=2025.2",
  "urllib3>=2.5.0",
  "uv>=0.9.2",
  "wcwidth>=0.5.3",
  "websockets>=15.0.1",
  "wheel>=0.46.3",
  "xxhash>=3.6.0",
  "yarl>=1.22.0",
]
train = [
  "absl-py>=2.3.1",
  "accelerate>=1.10.1",
  "aiohappyeyeballs>=2.6.1",
  "aiohttp>=3.11.18",
  "aiosignal>=1.3.2",
  "annotated-types>=0.7.0",
  "antlr4-python3-runtime>=4.9.3",
  "anyio>=4.11.0",
  "asttokens>=3.0.0",
  "attrs>=25.3.0",
  "av>=14.3.0",
  "bcrypt>=5.0.0",
  "bitsandbytes>=0.45.5",
  "boto3>=1.41.5",
  "botocore>=1.41.5",
  "certifi>=2025.4.26",
  "cffi>=2.0.0",
  "charset-normalizer>=3.4.1",
  "click>=8.1.8",
  "comm>=0.2.2",
  "contourpy>=1.3.3",
  "cryptography>=46.0.3",
  "cycler>=0.12.1",
  "datasets>=3.5.1",
  "debugpy>=1.8.14",
  "decorator>=5.2.1",
  "decord>=0.6.0",
  "deepspeed>=0.17.5",
  "dill>=0.3.8",
  "docker-pycreds>=0.4.0",
  "einops>=0.8.1",
  "exceptiongroup>=1.2.2",
  "executing>=2.2.0",
  "filelock>=3.13.1",
  "fire>=0.7.1",
  "flash_attn>=2.8.3",
  "fonttools>=4.59.2",
  "frozenlist>=1.6.0",
  "fsspec>=2024.6.1",
  "gitdb>=4.0.12",
  "GitPython>=3.1.44",
  "grpcio>=1.75.1",
  "h11>=0.16.0",
  "hf-xet>=1.1.9",
  "hjson>=3.1.0",
  "httpcore>=1.0.9",
  "httpx>=0.28.1",
  "huggingface-hub>=0.34.4",
  "idna>=3.10",
  "importlib_metadata>=8.6.1",
  "ipykernel>=6.29.5",
  "ipython>=9.2.0",
  "ipython_pygments_lexers>=1.1.1",
  "ipywidgets>=8.1.6",
  "jedi>=0.19.2",
  "Jinja2>=3.1.4",
  "jmespath>=1.0.1",
  "joblib>=1.5.2",
  "jupyter_client>=8.6.3",
  "jupyter_core>=5.7.2",
  "jupyterlab_widgets>=3.0.14",
  "kiwisolver>=1.4.9",
  "liger_kernel>=0.6.2",
  "Markdown>=3.9",
  "markdown-it-py>=3.0.0",
  "MarkupSafe>=2.1.5",
  "matplotlib>=3.10.6",
  "matplotlib-inline>=0.1.7",
  "mdurl>=0.1.2",
  "megfile>=5.0.2",
  "mpmath>=1.3.0",
  "msgpack>=1.1.0",
  "multidict>=6.4.3",
  "multiprocess>=0.70.16",
  "nest_asyncio>=1.6.0",
  "networkx>=3.3",
  "ninja>=1.11.1.4",
  "numpy>=2.1.2",
  "nvidia-cublas-cu12>=12.8.4.1",
  "nvidia-cuda-cupti-cu12>=12.8.90",
  "nvidia-cuda-nvrtc-cu12>=12.8.93",
  "nvidia-cuda-runtime-cu12>=12.8.90",
  "nvidia-cudnn-cu12>=9.10.2.21",
  "nvidia-cufft-cu12>=11.3.3.83",
  "nvidia-cufile-cu12>=1.13.1.3",
  "nvidia-curand-cu12>=10.3.9.90",
  "nvidia-cusolver-cu12>=11.7.3.90",
  "nvidia-cusparse-cu12>=12.5.8.93",
  "nvidia-cusparselt-cu12>=0.7.1",
  "nvidia-ml-py>=12.570.86",
  "nvidia-nccl-cu12>=2.27.3",
  "nvidia-nvjitlink-cu12>=12.8.93",
  "nvidia-nvtx-cu12>=12.8.90",
  "omegaconf>=2.3.0",
  "opencv-python>=4.11.0.86",
  "packaging>=25.0",
  "pandas>=2.2.3",
  "paramiko>=3.5.1",
  "parso>=0.8.4",
  "peft>=0.15.2",
  "pexpect>=4.9.0",
  "pickleshare>=0.7.5",
  "pillow>=11.3.0",
  "pip>=25.1",
  "platformdirs>=4.3.7",
  "prompt_toolkit>=3.0.51",
  "propcache>=0.3.1",
  "protobuf>=6.30.2",
  "psutil>=7.1.0",
  "ptyprocess>=0.7.0",
  "pure_eval>=0.2.3",
  "py-cpuinfo>=9.0.0",
  "pyarrow>=20.0.0",
  "pycparser>=2.23",
  "pydantic>=2.11.3",
  "pydantic_core>=2.33.1",
  "Pygments>=2.19.1",
  "PyNaCl>=1.6.1",
  "pyparsing>=3.2.3",
  "python-dateutil>=2.9.0.post0",
  "pytz>=2025.2",
  "PyYAML>=6.0.2",
  "pyzmq>=26.4.0",
  "qwen-vl-utils>=0.0.14",
  "regex>=2024.11.6",
  "requests>=2.32.3",
  "rich>=14.0.0",
  "s3transfer>=0.15.0",
  "safetensors>=0.6.2",
  "scikit-learn>=1.7.2",
  "scipy>=1.16.2",
  "sentry-sdk>=2.27.0",
  "setproctitle>=1.3.5",
  "setuptools>=79.0.1",
  "six>=1.17.0",
  "smmap>=5.0.2",
  "sniffio>=1.3.1",
  "stack_data>=0.6.3",
  "sympy>=1.13.3",
  "tabulate>=0.9.0",
  "tensorboard>=2.20.0",
  "tensorboard-data-server>=0.7.2",
  "tensorboardX>=2.6.2.2",
  "termcolor>=3.1.0",
  "threadpoolctl>=3.6.0",
  "tokenizers>=0.22.0",
  "torch>=2.8.0",
  "torchaudio==2.8.0",
  "torchvision==0.23.0",
  "tornado>=6.4.2",
  "tqdm>=4.67.1",
  "traitlets>=5.14.3",
  "transformers>=4.57.0",
  "triton>=3.4.0",
  "trl>=0.23.1",
  "typing_extensions>=4.13.2",
  "typing-inspection>=0.4.0",
  "tzdata>=2025.2",
  "ujson>=5.10.0",
  "urllib3>=2.4.0",
  "uv>=0.9.2",
  "wandb>=0.19.10",
  "wcwidth>=0.2.13",
  "Werkzeug>=3.1.3",
  "wheel>=0.45.1",
  "widgetsnbextension>=4.0.14",
  "xxhash>=3.5.0",
  "yarl>=1.20.0",
  "zipp>=3.21.0",
]
"pvc-judge" = [
  "accelerate>=1.12.0",
  "aiohappyeyeballs>=2.6.1",
  "aiohttp>=3.13.2",
  "aiosignal>=1.4.0",
  "annotated-doc>=0.0.4",
  "annotated-types>=0.7.0",
  "anthropic>=0.71.0",
  "anyio>=4.12.0",
  "apache-tvm-ffi>=0.1.4",
  "astor>=0.8.1",
  "attrs>=25.4.0",
  "av>=16.0.1",
  "bcrypt>=5.0.0",
  "blake3>=1.0.8",
  "boto3>=1.42.45",
  "botocore>=1.42.45",
  "cachetools>=6.2.2",
  "cbor2>=5.7.1",
  "certifi>=2025.11.12",
  "cffi>=2.0.0",
  "charset-normalizer>=3.4.4",
  "click>=8.2.1",
  "cloudpickle>=3.1.2",
  "colorlog>=6.10.1",
  "compressed-tensors>=0.11.0",
  "cryptography>=46.0.4",
  "cuda-bindings>=13.0.3",
  "cuda-pathfinder>=1.3.2",
  "cuda-python>=13.0.3",
  "cupy-cuda12x>=13.6.0",
  "datasets>=4.4.1",
  "depyf>=0.19.0",
  "dill>=0.4.0",
  "diskcache>=5.6.3",
  "distro>=1.9.0",
  "dnspython>=2.8.0",
  "docstring_parser>=0.17.0",
  "editscore>=0.2",
  "einops>=0.8.1",
  "email-validator>=2.3.0",
  "fastapi>=0.123.5",
  "fastapi-cli>=0.0.16",
  "fastapi-cloud-cli>=0.5.2",
  "fastar>=0.8.0",
  "fastrlock>=0.8.3",
  "filelock>=3.19.1",
  "flashinfer-python>=0.5.2",
  "frozendict>=2.4.7",
  "frozenlist>=1.8.0",
  "fsspec>=2025.9.0",
  "gguf>=0.17.1",
  "h11>=0.16.0",
  "hf-xet>=1.2.0",
  "httpcore>=1.0.9",
  "httptools>=0.7.1",
  "httpx>=0.28.1",
  "huggingface-hub>=0.36.0",
  "idna>=3.11",
  "interegular>=0.3.3",
  "Jinja2>=3.1.6",
  "jiter>=0.12.0",
  "jmespath>=1.0.1",
  "json_repair>=0.54.2",
  "jsonschema>=4.25.1",
  "jsonschema-specifications>=2025.9.1",
  "lark>=1.2.2",
  "llguidance>=0.7.30",
  "llvmlite>=0.44.0",
  "lm-format-enforcer>=0.11.3",
  "loguru>=0.7.3",
  "markdown-it-py>=4.0.0",
  "MarkupSafe>=2.1.5",
  "mdurl>=0.1.2",
  "megfile>=5.0.8",
  "mistral_common>=1.8.6",
  "model-hosting-container-standards>=0.1.9",
  "mpmath>=1.3.0",
  "msgpack>=1.1.2",
  "msgspec>=0.20.0",
  "multidict>=6.7.0",
  "multiprocess>=0.70.18",
  "networkx>=3.5",
  "ninja>=1.13.0",
  "numba>=0.61.2",
  "numpy>=2.2.6",
  "nvidia-cublas-cu12>=12.8.4.1",
  "nvidia-cuda-cupti-cu12>=12.8.90",
  "nvidia-cuda-nvrtc-cu12>=12.8.93",
  "nvidia-cuda-runtime-cu12>=12.8.90",
  "nvidia-cudnn-cu12>=9.10.2.21",
  "nvidia-cudnn-frontend>=1.16.0",
  "nvidia-cufft-cu12>=11.3.3.83",
  "nvidia-cufile-cu12>=1.13.1.3",
  "nvidia-curand-cu12>=10.3.9.90",
  "nvidia-cusolver-cu12>=11.7.3.90",
  "nvidia-cusparse-cu12>=12.5.8.93",
  "nvidia-cusparselt-cu12>=0.7.1",
  "nvidia-cutlass-dsl>=4.3.1",
  "nvidia-ml-py>=13.580.82",
  "nvidia-nccl-cu12>=2.27.3",
  "nvidia-nvjitlink-cu12>=12.8.93",
  "nvidia-nvshmem-cu12>=3.3.20",
  "nvidia-nvtx-cu12>=12.8.90",
  "openai>=2.8.1",
  "openai-harmony>=0.0.8",
  "opencv-python-headless>=4.12.0.88",
  "outlines_core>=0.2.11",
  "packaging>=25.0",
  "pandas>=2.3.3",
  "paramiko>=3.5.1",
  "partial-json-parser>=0.2.1.1.post7",
  "peft>=0.18.0",
  "pillow>=11.3.0",
  "pip>=25.3",
  "prometheus_client>=0.23.1",
  "prometheus-fastapi-instrumentator>=7.1.0",
  "propcache>=0.4.1",
  "protobuf>=6.33.1",
  "psutil>=7.1.3",
  "py-cpuinfo>=9.0.0",
  "pyarrow>=22.0.0",
  "pybase64>=1.4.2",
  "pycountry>=24.6.1",
  "pycparser>=2.23",
  "pydantic>=2.12.5",
  "pydantic_core>=2.41.5",
  "pydantic-extra-types>=2.10.6",
  "Pygments>=2.19.2",
  "PyNaCl>=1.6.2",
  "python-dateutil>=2.9.0.post0",
  "python-dotenv>=1.2.1",
  "python-json-logger>=4.0.0",
  "python-multipart>=0.0.20",
  "pytz>=2025.2",
  "PyYAML>=6.0.3",
  "pyzmq>=27.1.0",
  "qwen-vl-utils>=0.0.14",
  "ray>=2.52.1",
  "referencing>=0.37.0",
  "regex>=2025.11.3",
  "requests>=2.32.5",
  "rich>=14.2.0",
  "rich-toolkit>=0.17.0",
  "rignore>=0.7.6",
  "rpds-py>=0.30.0",
  "s3transfer>=0.16.0",
  "safetensors>=0.7.0",
  "scipy>=1.16.3",
  "sentencepiece>=0.2.1",
  "sentry-sdk>=2.46.0",
  "setproctitle>=1.3.7",
  "setuptools>=79.0.1",
  "shellingham>=1.5.4",
  "six>=1.17.0",
  "sniffio>=1.3.1",
  "soundfile>=0.13.1",
  "soxr>=1.0.0",
  "starlette>=0.50.0",
  "supervisor>=4.3.0",
  "sympy>=1.14.0",
  "tabulate>=0.9.0",
  "tiktoken>=0.12.0",
  "tokenizers>=0.22.1",
  "torch==2.8.0",
  "torchaudio==2.8.0",
  "torchvision==0.23.0",
  "tqdm>=4.67.1",
  "transformers>=4.57.3",
  "triton>=3.4.0",
  "typer>=0.20.0",
  "typing_extensions>=4.15.0",
  "typing-inspection>=0.4.2",
  "tzdata>=2025.2",
  "urllib3>=2.5.0",
  "uvicorn>=0.38.0",
  "uvloop>=0.22.1",
  "vllm>=0.11.0",
  "watchfiles>=1.1.1",
  "websockets>=15.0.1",
  "wheel>=0.45.1",
  "xformers>=0.0.32.post1",
  "xgrammar>=0.1.25",
  "xxhash>=3.6.0",
  "yarl>=1.22.0",
]

[tool.uv]
environments = ["sys_platform == 'linux'"]
conflicts = [
  [
    { extra = "annotate" },
    { extra = "train" },
  ],
  [
    { extra = "annotate" },
    { extra = "pvc-judge" },
  ],
  [
    { extra = "train" },
    { extra = "pvc-judge" },
  ],
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
